# Frho

./: .gitignore  Cargo.toml  Disclamer.md  LICENSE  README.md  bigStepValuesAndTypes.md  semantics.md  syntax.md  terms-explained.md  test-all-leaktests  test-all-leaktests-fast  test-leaks  test-valgrind  typechecker.md
samples/: biglambda1.frho  biglambda1b.frho  biglambda2.frho  biglambda3.frho  biglambda4.frho  biglambda5.frho  biglambda6.frho  biglambda7.frho  biglambda7b.frho  biglambda8.frho  biglambda8b.frho  biglambda8c.frho  biglambda8d.frho  case.frho  count.frho  dyn_function.frho  dyn_function_for_tests.frho  dyn_tests.frho  fac.frho  fib.frho  fib_anon_rec.frho  let.frho  medium_fib.frho  rec_and_save.frho  record_self_assign.frho  records.frho  records2.frho  recursion.frho  recursion100k.frho  recursion250k.frho  recursion500k.frho  return_function.frho  return_function_and_call.frho  small_fib.frho  test_leak.frho  test_leak_2.frho  test_leak_3.frho  test_leak_4.frho  test_leak_5.frho  test_leak_6.frho  (+13 more)
src/: environment.rs  evaluation.rs  evaluation_tests.rs  interpreter.rs  interpreter_environment.rs  interpreter_evaluation.rs  interpreter_tests.rs  interpreter_utils.rs  logicterms.rs  main.rs  parser_grammar.lalrpop  parser_helper.rs  parser_preprocessor.rs  parser_tests.rs  terms.rs  tests.rs  typechecker.rs  typechecker_tests.rs  types.rs  utils.rs  values.rs
typecheck-samples/: fib.frho  multi_recursion.frho  multi_recursion_2.frho  records.frho  recursion.frho  test_leak.frho  test_leak_2.frho  test_leak_3.frho  test_leak_7.frho  (+5 more)
(+68 files in other folders)
