[package]
name = "frho"
version = "0.1.0"
edition = "2021"
build = "build.rs" # <-- We added this and everything after!

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
id_tree = "1.8.0"
lalrpop-util = {version = "0.20.0", features = ["lexer", "unicode"] }
rand = "0.8.5"
